--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -69,10 +69,11 @@ h6 {
 section {
     overflow: hidden;
     padding: 80px 0;
+    position: sticky;
 }
 
 .section-bg {
-    background-color: #000000;
+    background: url("../img/home3.jpg");
 }
 
 .section-header {
@@ -300,24 +301,6 @@ section {
 
 .header .logo h1 span {
     color: var(--color-primary);
-}
-
-.header .btn-login-user,
-.header .btn-login-user:focus {
-    font-size: 14px;
-    font-weight: bolder;
-    color: #fff;
-    background: var(--color-primary);
-    padding: 8px 20px;
-    margin-left: 30px;
-    border-radius: 30px;
-    transition: 0.3s;
-}
-
-.header .btn-login-user:hover,
-.header .btn-login-user:focus:hover {
-    color: #fff;
-    background: #424242;
 }
 
 section {
@@ -608,26 +591,26 @@ section {
 }
 
 .hero p {
-    color: #aaaaaa;
+    color: #979797;
     font-weight: 400;
     margin-bottom: 30px;
 }
 
-.hero .btn-Register-customer-new {
+.hero .btn-login-user {
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 1px;
     display: inline-block;
     padding: 12px 36px;
-    border-radius: 50px;
+    border-radius: 5px;
     transition: 0.5s;
     color: #fff;
-    background: var(--color-primary);
+    background: rgba(170, 170, 170, 0.91);
     box-shadow: 0 8px 28px rgba(85, 85, 85, 0.2);
 }
 
-.hero .btn-Register-customer-new:hover {
-    background: rgba(177, 177, 177, 0.8);
+.hero .btn-login-user:hover {
+    background: rgba(99, 99, 99, 0.9);
     box-shadow: 0 8px 28px rgba(69, 69, 69, 0.45);
 }
 
@@ -698,12 +681,11 @@ section {
 /* # =================== Car Section =====================*/
 
 .form-container form {
-    display: flex;
+    /*display: flex;*/
     flex-wrap: wrap;
     gap: 1rem;
-    position: relative;
     top: 1rem;
-    background: #000000;
+    background: rgb(255, 255, 255);
     padding: 0.5rem 0.5rem 0.5rem 1rem;
     border-radius: 0.5rem;
     box-shadow: var(--box-shadow);
@@ -718,6 +700,7 @@ section {
 
 .input-box span {
     font-weight: 500;
+    color: #000000;
 }
 
 .input-box input {
@@ -1078,9 +1061,9 @@ section {
 
 /* #================ Contact Section =====================*/
 .contact .info-item {
-    background: #eeeeee;
+    background: #ffffff;
     padding: 30px;
-    height: 100%;
+    height: 100px;
     border-radius: 20px;
 }
 
@@ -1100,7 +1083,7 @@ section {
 
 .contact .info-item h3 {
     font-size: 20px;
-    color: #6c757d;
+    color: #555555;
     font-weight: 700;
     margin: 0 0 5px 0;
 }
